--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./styles.css">
   <title>JRS Coding School Blog</title>
 </head>
 
@@ -20,7 +21,7 @@
   </div>
 
   <div class="sidenav">
-    <ul>
+    <ul class="weeks">
       <li><a href="week1">Week One</a></li>
       <li><a href="week2">Week Two</a></li>
       <li><a href="week3">Week Three</a></li>
