--- a/about.html
+++ b/about.html
@@ -14,14 +14,12 @@
   <div class="wrapper">
     <div class="heading">
       <h1>JRS Coding School Blog</h1>
-      <div class="navigation-bar">
-        <nav>
-                <a href="index.html" class="nav-home">Home</a> |
-                <a href="contact.html" class="nav-contact">Contact</a> |
-                <a href="about.html" class="nav-about">About</a>
-        </nav>
-        <input type="text" placeholder="Search..." class="search-bar">
-      </div>
+      <div id="nav-placeholder"></div>
+        <script>
+        $(function(){
+          $("#nav-placeholder").load("nav.html");
+        });
+        </script>
     </div>
 
     <div class="sidenav">
