--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" href="./styles.css">
   <title>JRS Coding School Blog</title>
 </head>
@@ -14,14 +15,12 @@
   <div class="wrapper">
     <div class="heading">
       <h1>JRS Coding School Blog</h1>
-      <div class="navigation-bar">
-        <nav>
-            <a href="index.html" class="nav-home">Home</a> |
-            <a href="contact.html" class="nav-contact">Contact</a> |
-            <a href="about.html" class="nav-about">About</a>
-        </nav>
-        <input type="text" placeholder="Search..." class="search-bar">
-      </div>
+      <div id="nav-placeholder"></div>
+        <script>
+        $(function(){
+          $("#nav-placeholder").load("nav.html");
+        });
+        </script>
     </div>
 
     <div class="sidenav">
@@ -58,8 +57,8 @@
         </p>
         <br />
         <div class="images">
-            <img src="Rest-API.png" alt="REST API pic" style="width: 250px">
-          </div>
+          <img src="Rest-API.png" alt="REST API pic" style="width: 250px">
+        </div>
       </div>
       <div class="postarea2 week1">
         <h3>
