--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,21 @@
-<div class="navigation-bar">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
     <nav>
         <a href="index.html" class="nav-home">Home</a> |
         <a href="contact.html" class="nav-contact">Contact</a> |
         <a href="about.html" class="nav-about">About</a>
     </nav>
     <input type="text" placeholder="Search..." class="search-bar">
-</div>
+
+</body>
+
+</html>
