--- a/week1.html
+++ b/week1.html
@@ -6,38 +6,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link rel="stylesheet" href="./styles.css">
   <title>JRS Coding School Blog</title>
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="heading">
-      <h1>JRS Coding School Blog</h1>
-      <div class="navigation-bar">
-        <nav>
-                <a href="index.html" class="nav-home">Home</a> |
-                <a href="contact.html" class="nav-contact">Contact</a> |
-                <a href="about.html" class="nav-about">About</a>
-        </nav>
-        <input type="text" placeholder="Search..." class="search-bar">
-      </div>
-    </div>
+      <div class="heading">
+          <h1>JRS Coding School Blog</h1>
+          <div id="nav-placeholder"></div>
+            <script>
+            $(function(){
+              $("#nav-placeholder").load("nav.html");
+            });
+            </script>
+        </div>
 
-    <div class="sidenav">
-      <ul class="weeks">
-        <li><a href="week1.html">Week One</a></li>
-        <li><a href="week2.html">Week Two</a></li>
-        <li><a href="week3.html">Week Three</a></li>
-        <li><a href="week4.html">Week Four</a></li>
-      </ul>
-      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer>
-      </script>
-      <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
-        data-theme="dark" data-vanity="colby-burke"><a class="LI-simple-link"
-          href='https://www.linkedin.com/in/colby-burke?trk=profile-badge'>Colby Burke</a></div>
-
-    </div>
+        <div class="sidenav">
+            <div id="sidenav-list">
+      
+            </div>
+            <script>
+              $(function () {
+                $("#sidenav-list").load("sidenav.html");
+              });
+            </script>
+            <div id="sidenav-LI"></div>
+            <script>
+              $(function () {
+                $("#sidenav-LI").load("sidenavLI.html");
+              });
+            </script>
+          </div>
 
     <div class="main">
       <div class="postarea3 week1">
@@ -132,10 +133,13 @@
     </div>
 
     <div class="footer">
-      <footer>
-        Designed by Colby Burke
-      </footer>
-    </div>
+
+      </div> 
+             <script>
+              $(function () {
+                $(".footer").load("footer.html");
+              });
+            </script>
   </div>
 </body>
 
