--- a/week2.html
+++ b/week2.html
@@ -43,55 +43,28 @@
 
 
     <div class="main">
-      <div class="postarea3 week2">
-        <h3>
-          Colby Burke
-        </h3>
-        <h2>
-          JRS Coding School Day Five
-        </h2>
-        <p>
-          Since today is Friday, the fifth day of JRS, we took much of the day to work on our current projects. We have
-          practice problems, websites, and projects (such as the calculator project) which need to be completed. The
-          calculator has taken up much of my time this week because when I fix one problem in the JavaScript, often
-          times another problem will appear. By now, the calculator looks good and does what I want it to. Other than
-          those projects, we began to speak about the REST API, Bootstrap, jQuery, and databases. I know how to program,
-          but I haven’t seen some of the stuff on the backend which we will talk about next week, so I’m excited to see
-          what will happen.
-        </p>
-        <br />
-        <div class="images">
-          <img src="Rest-API.png" alt="REST API pic" style="width: 250px">
-        </div>
-      </div>
       <div class="postarea2 week2">
         <h3>
           Colby Burke
         </h3>
 
         <h2>
-          JRS Coding School Day Four
+          JRS Coding School Day Ten
         </h2>
 
         <p>
-          Since our first day on Monday, we’ve touched on HTML/CSS as well as JavaScript. Of the three ways to code, I
-          can
-          definitely say that JavaScript is my favorite so far given my preparation. I would say that without
-          preparation
-          before the class started, I may have fallen behind. What’s interesting is the different ways in which you can
-          code JavaScript. While we are just learning loops and styles of coding which is more basic, I tend to simplify
-          functions with the use of other high-order functions. My presentation was today, thursday, and was about
-          iteration and recursion. I explained to the class that while I understand how to both make and use recursive
-          functions, the way it interacts with the call stack still remains a bit out-of-the-ordinary for me. Since
-          Monday, we’ve started on several projects and practice problems. The JavaScript problems were fairly easy for
-          me; 29 functions ranging from: easy, medium, to more difficult. I finished a functioning calculator which I am
-          just beginning to link to my functions in a JavaScript file, and have multiple other HTML and CSS projects
-          which
-          I’ve uploaded to GitHub.
+          Today is Friday, the tenth day of JRS, and we are wrapping things up for the week and working on our projects.
+          This week we learned some things about APIs and im pretty familiar with how to use them at this point. Along
+          with that we’ve been downloading and messing around with npms (Node Package Manager) and node.js. At this
+          point I only have 6 more problems to do of the 84 we were assigned in order to be two weeks ahead. The
+          practice problems seem somewhat easy for the most part, but some were harder than others. Recursion is
+          becoming much more simple for me, however, our “mob” programming styled group assignment presented a challenge
+          because it was difficult to sync our ideas with our typing. Our assignment has to do with recursion and we are
+          not allowed to use any type of loops.
         </p>
         <br />
         <div class="images">
-          <img src="HTMLCSSJS.jpeg" alt="HTML, CSS, and JS pic" style="width: 250px">
+          <img src="recursionpic.jpeg" alt="HTML, CSS, and JS pic" style="width: 250px">
         </div>
       </div>
 
